--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     <div class="container mt-4">
-        <img src="ruta-de-la-imagen.jpg" alt="Imagen" class="img-fluid">
+        <img src="ia.png" alt="Imagen" class="img-fluid">
     </div>
 
    
